[project]
name = "hackernews-research-agent"
version = "0.1.0"
description = "A durable Hacker News research agent built with Resonate"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "resonate-sdk>=0.6.7",
]

[project.scripts]
agent = "src.agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
